--- a/public/chat.html
+++ b/public/chat.html
@@ -10,7 +10,7 @@
 <body>
   <div class="chat-container">
     <header class="chat-header">
-      <h1><i class="fas fa-smile"></i> ChatCord</h1>
+      <h1>MERCURY <i class="fas fa-dragon"></i></h1>
       <a href="index.html" class="btn">Leave Room</a>
     </header>
     <main class="chat-main">
