--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,10 @@
 	<body>
 		<div class="join-container">
 			<header class="join-header">
-				<h1><i class="fas fa-smile"></i> Mercury</h1>
+				<h1>MERCURY <i class="fas fa-dragon"></i></h1>
 			</header>
 			<main class="join-main">
-				<form action="chat.html">
+				<form>
 					<div class="form-control">
 						<label for="username">Username</label>
 						<input
@@ -33,15 +33,9 @@
 					<div class="form-control">
 						<label for="room">Room</label>
 						<select name="room" id="room">
-							<!-- <option value="JavaScript">JavaScript</option>
-							<option value="Python">Python</option>
-							<option value="PHP">PHP</option>
-							<option value="C#">C#</option>
-							<option value="Ruby">Ruby</option>
-							<option value="Java">Java</option> -->
 						</select>
 					</div>
-					<button type="submit" class="btn">Join Chat</button>
+					<button type="submit" class="btn" id="submitBtn">Join Chat</button>
 				</form>
 			</main>
 		</div>
