Lots of fixesss

--- a/public/chat.html
+++ b/public/chat.html
@@ -11,7 +11,7 @@
   <div class="chat-container">
     <header class="chat-header">
       <h1>MERCURY <i class="fas fa-dragon"></i></h1>
-      <a href="index.html" class="btn">Leave Room</a>
+      <button class="btn" id="leave-room">Leave Room</button>
     </header>
     <main class="chat-main">
       <div class="chat-sidebar">
