--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,7 @@
 							placeholder="Enter username..."
 							required
 						/>
+						<p id="username-error">A user with this username already exists in the room</p>
 					</div>
 					<div class="form-control">
 						<label for="room">Room</label>
